Convert rate button added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                         <div class="msg" id="msg"></div>
                         <button class="convert-btn" id="convertBtn">Convert</button>
                     </div>
+                    <div align="center" style="margin-top: 20px;">
+                        <button type="button" onclick="showAllRates()">Show All Currency Rates</button>
+                    </div>
+                    
+                    <div id="rateTableContainer" style="margin-top: 20px;" align="center"></div>                    
                 </div>
                 
             </form>
